<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a202128.kalkukator.SimpleCalculatorActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/formulaView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="bottom|end"
            android:text="0"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="bottom|end" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/simpleMathC"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="118dp"
                    android:layout_height="70dp"
                    android:text="@string/mathButtonC" />

                <Button
                    android:id="@+id/simpleMathBkspc"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="117dp"
                    android:layout_height="70dp"
                    android:text="@string/mathButtonBkspc" />

                <Button
                    android:id="@+id/simpleMathDiv"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="117dp"
                    android:layout_height="70dp"
                    android:text="@string/mathButtonDiv" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/simpleMath7"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton7" />

                <Button
                    android:id="@+id/simpleMath8"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton8" />

                <Button
                    android:id="@+id/simpleMath9"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton9" />

                <Button
                    android:id="@+id/simpleMathMltp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:elevation="0dp"
                    android:text="@string/mathButtonMltp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/simpleMath4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton4" />

                <Button
                    android:id="@+id/simpleMath5"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton5" />

                <Button
                    android:id="@+id/simpleMath6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton6" />

                <Button
                    android:id="@+id/simpleMathPlus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButtonPlus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/simpleMath1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton1" />

                <Button
                    android:id="@+id/simpleMath2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton2" />

                <Button
                    android:id="@+id/simpleMath3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton3" />

                <Button
                    android:id="@+id/simpleMathMinus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButtonMinus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/simpleMathPlsMin"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButtonPlsMin" />

                <Button
                    android:id="@+id/simpleMath0"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButton0" />

                <Button
                    android:id="@+id/simpleMathDot"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButtonDot" />

                <Button
                    android:id="@+id/simpleMathEquals"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/mathButtonEquals" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
